Alec's ISP/rules.v4
# Generated by iptables-save v1.6.0 on Tue Jun  5 00:06:25 2018
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o wlan0 -j MASQUERADE
COMMIT
# Completed on Tue Jun  5 00:06:25 2018
# Generated by iptables-save v1.6.0 on Tue Jun  5 00:06:25 2018
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i eth0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i eth0 -p icmp -j ACCEPT
-A INPUT -i wlan0 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -i wlan0 -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -i eth0 -p udp -m udp --dport 5353
-A FORWARD ! -i wlan0 -j ACCEPT
-A FORWARD -i wlan0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o eth0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o eth0 -p icmp -j ACCEPT
-A OUTPUT -o wlan0 -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -o wlan0 -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -o wlan0 -p udp -m udp --dport 67 -j ACCEPT
-A OUTPUT -o wlan0 -p tcp -m multiport --dports 80,443 -j ACCEPT
-A OUTPUT -o wlan0 -p icmp -j ACCEPT
-A OUTPUT -o eth0 -p udp -m udp --dport 5353
COMMIT
# Completed on Tue Jun  5 00:06:25 2018
